<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Rectangle"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/x_field"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="25sp"
            android:hint="@string/please_enter_x_value"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:paddingBottom="15dp" />

        <EditText
            android:id="@+id/y_field"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="25sp"
            android:hint="@string/please_enter_y_value"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:paddingBottom="15dp" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp">

            <RadioButton
                android:id="@+id/area_rb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/area"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/perimeter_rb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/perimeter"
                android:textSize="25sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/result_txt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:hint="00.00"
            android:gravity="center" />

        <Button
            android:id="@+id/result_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/cstom_shape"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/result"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/new_operation_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/cstom_shape"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/new_process" />

    </LinearLayout>
</layout>